# poki-pona

./: .drone.yml  README.md  meson.build  poki-pona.c
data/: desktop-install.sh  poki-pona.desktop
